Found a workaround to the squished select2 problem.  In turbolinks:load event, added a manual trigger to the resize event and that fixed it.  Note, the javascript call to resize didn't work, but the jQuery one did.  Go figure.

--- a/app/assets/stylesheets/styles/properties.scss
+++ b/app/assets/stylesheets/styles/properties.scss
@@ -60,7 +60,7 @@ $g-screen-width-min-desktop: 880px;
   margin-left:  auto;
   margin-right: auto;
   opacity: 1;             /* [1] */
-  padding-top: 80px;
+  padding-top: 0px;
   position: relative; 
   transform: scale(1, 1); /* [1] */
   width: 58%;
